--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   reorderables: ^0.3.2
+  http: ^0.13.0
 
   # For ListViewCard
   # fluttertoast: ^7.1.6
