--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   reorderables: ^0.3.2
   http: ^0.13.0
+  flutter_svg: ^0.19.3
 
   # For ListViewCard
   # fluttertoast: ^7.1.6
@@ -55,6 +56,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/strydeLogoClean.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
