Create a new HomeScreen with icons for its navbar
* Add a new flutter_icons package to pubspec.yaml to allow for more
options for icons.
* Create four placeholder screens that can be navigated to on the home
screen by swiping or tapping on the BottomNavigationBar.
* Fix bug with MultiPageScrollingWidget that caused it to make icons
in its BottomNavigationBar be displayed as white (the same color as
its background) if there was more than 3 icons in the navbar.
navigated to by swiping or using

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  reorderables: ^0.3.2
-  http: ^0.13.0
-  flutter_svg: ^0.19.3
-
-  # For ListViewCard
-  # fluttertoast: ^7.1.6
+  #reorderables: ^0.3.2
+  http: ^0.13.0             # For HTTP requests
+  flutter_svg: ^0.19.3      # Display svg logo in AppBar
+  flutter_icons: ^1.1.0     # For more icons
 
 
   # The following adds the Cupertino Icons font to your application.
