Add support for cross-platform .env variables

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   http: ^0.13.0             # For HTTP requests
   flutter_svg: ^0.19.3      # Display svg logo in AppBar
   flutter_icons: ^1.1.0     # For more icons
+  flutter_dotenv: ^3.1.0    # For .env variables
+  universal_io: ^1.0.2      # To fix Platform.environment not working in browsers
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -56,6 +58,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/strydeLogoClean.svg
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
