Receive non-empty workouts
* Previously, Stryde could only get workouts with no exercises from the
server (empty exercises). Now, it can get non-empty workouts
(workouts with exercises).
* Add log out button to StrydeAppBar in addition to the existing
  button in UserProfileScreen.
* Enable EditExerciseInformationScreen to display information with
  multiple sets with a number of rows in the table equal to the number
  of sets.
* Update the app's name from "workout_buddy" to "Stryde" in
  AndroidManifest.xml (for Android) & in Info.plist (for iOS).
* Update all models to allow for them to be tested for equality.
* Move functionality of getting querying the server for workouts to
  the new WorkoutController.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <!-- TODO: usersClearTraffic allows HTTP requests instead of HTTPS.
                Make the server do HTTPS requests instead of HTTP. -->
    <application
-        android:label="workout_buddy"
+        android:label="Stryde"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true" >
         <activity
