--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  #flutter_launcher_icons: "^0.8.0"
+
+#flutter_icons:
+  #android: true
+  #ios: true
+  #image_path: "assets/images/strydeAppIcon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,6 +71,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/strydeLogoClean.svg
+    - assets/images/strydeAppIcon.png
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
