--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/strydeLogoClean.svg
-    - assets/images/strydeAppIcon.png
+    - assets/images/msjLogo.png
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
