--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.0                 # For HTTP requests
   flutter_svg: ^0.21.0+1        # Display svg logo in AppBar
-  flutter_dotenv: ^4.0.0-nullsafety.0     # For .env variables
+  #flutter_dotenv: ^4.0.0-nullsafety.0     # For .env variables
   universal_io: ^2.0.4          # To fix Platform.environment not working in browsers
   multi_select_flutter: ^4.0.0  # Multi select dropdown menus
   syncfusion_flutter_calendar: ^19.1.55   # For calendar
